# ClipSync

./: .gitattributes  .gitignore  COLAB_SETUP.md  JSON_QUICK_START.md  README.md  colab_backend.ipynb  pyproject.toml  restart_backend.bat  start.bat  test_json_videos.py
backend/: __init__.py  main.py
backend/core/: __init__.py  actuator.py  audio_sensor.py  audio_sensor_vertex.py  autonomous_editor.py  config.py  container.py  downloader.py  frame_describer.py  llm_judge.py  memory_layer.py  solver.py  translator.py  vision_sensor.py
backend/models/: __init__.py  schemas.py
frontend/: app.py
